# jobkoi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: extraction-quality.yml
app/: __init__.py  main.py
app/core/: config.py  logging.py
app/db/: init_db.py  session.py
app/documents/: __init__.py  exporters.py  html_renderer.py  template_renderer.py
app/domain/: __init__.py  job_analysis.py  job_text.py  profile_import_adjudication.py  profile_import_builders.py  profile_import_confidence.py  profile_import_conflicts.py  profile_import_quality.py  profile_import_types.py  tailoring_builders.py  tailoring_guards.py  tailoring_matchers.py  tailoring_types.py
app/frontend/: ui.py
app/llm/: __init__.py  client.py  contracts.py  cover_letter_helper.py  errors.py  extraction_helper.py  job_analysis_adapter.py  parser.py  prompt_factory.py  provider.py  rewrite_helper.py  tailoring_rewrite_adapter.py  validation_helper.py
app/schemas/: application_package.py  document.py  job.py  profile.py  profile_import.py  tailoring.py
app/services/: __init__.py  application_package_service.py  document_service.py  job_analysis_service.py  job_post_service.py  profile_import_extractors.py  profile_import_service.py  profile_service.py  tailoring_service.py
app/templates/: cover_letter_de.j2  cover_letter_en.j2  cv_de.j2  (+1 more)
docs/: extraction_quality_program.md
scripts/: profile_import_calibrate_confidence.py  profile_import_quality_gate.py  profile_import_quality_report.py
tests/: conftest.py
(+95 files in other folders)
